crates/config/tests/snapshots/prefix_block_multiple.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-multiple

## Input

```mical
first {
  a 1
}
second {
  b 2
}

```

## JSON

```json
{
  "firsta": 1,
  "secondb": 2
}
```

vim:ft=markdown
