crates/config/tests/snapshots/prefix_block_nested.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-nested

## Input

```mical
outer {
  inner {
    key value
  }
}

```

## JSON

```json
{
  "outerinnerkey": "value"
}
```

vim:ft=markdown
