crates/config/tests/snapshots/prefix_block_nested_multi_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-nested-multi-dedent

## Input

```mical
a.
  b.
    c 1
x 2

```

## JSON

```json
{
  "a.b.c": 1,
  "x": 2
}
```

vim:ft=markdown
