crates/config/tests/snapshots/prefix_block_no_indent_body.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-no-indent-body

## Input

```mical
s {
k v
m 2
}

```

## JSON

```json
{
  "sk": "v",
  "sm": 2
}
```

vim:ft=markdown
