crates/config/tests/snapshots/prefix_block_open_at_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-open-at-eof

## Input

```mical
key {
```

## Parser Error

```
5..5: missing closing '}' for prefix block

```

## JSON

```json
{}
```

vim:ft=markdown
