crates/config/tests/snapshots/prefix_block_opener_quoted_key.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-opener-quoted-key

## Input

```mical
'a b.'
  c 1

```

## JSON

```json
{
  "a b.c": 1
}
```

vim:ft=markdown
