crates/config/tests/snapshots/prefix_block_quoted_key.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-quoted-key

## Input

```mical
"section" {
  key value
}
'other' {
  name hello
}

```

## JSON

```json
{
  "sectionkey": "value",
  "othername": "hello"
}
```

vim:ft=markdown
